--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-livekit-agents
-livekit-plugins-openai
-livekit-plugins-silero
-livekit-plugins-google
-livekit-plugins-noise-cancellation
-mem0ai
-duckduckgo-search
-langchain_community
-requests
-python-dotenv
+# Streamlit UI
 streamlit
+requests
+
+# Backend
+fastapi
+uvicorn
+python-dotenv
+
+# LiveKit
+livekit
+livekit-agents
+livekit-plugins-google
